--- a/main/res/layout/dialog_menu.xml
+++ b/main/res/layout/dialog_menu.xml
@@ -6,115 +6,94 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_dialog">
 
+    <SeekBar
+        android:id="@+id/brightnessSlider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:max="100"
+        android:progress="50"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <GridLayout
         android:id="@+id/buttonPanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="4"
-        android:columnCount="3"
+        android:rowCount="3"
+        android:columnCount="2"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/brightnessSlider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!--Устал делать переходы цветов время 5 утра позже исправлю-->
-        <!-- Первый ряд -->
         <Button
-            android:id="@+id/btn1"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
+            android:id="@+id/button1"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:backgroundTint="#FF0000"
-            android:contentDescription="Button 1"/>
+            android:backgroundTint="#FFFFFF"
+            android:text="Button 1"
+            android:background="@drawable/rounded_button"/>
         <Button
-            android:id="@+id/btn2"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
+            android:id="@+id/button2"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:backgroundTint="#E9967A"
-            android:contentDescription="Button 2"/>
-
+            android:backgroundTint="#FFFFFF"
+            android:text="Button 2"
+            android:background="@drawable/rounded_button"/>
         <Button
-            android:id="@+id/btn3"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
+            android:id="@+id/button3"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:backgroundTint="#2273E212"
-            android:contentDescription="Button 3"/>
-        <!-- Второй ряд -->
+            android:backgroundTint="#FFFFFF"
+            android:text="Button 3"
+            android:background="@drawable/rounded_button"/>
         <Button
-            android:id="@+id/btn4"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
+            android:id="@+id/button4"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:backgroundTint="#2196F3"
-            android:contentDescription="Button 4"/>
-
+            android:backgroundTint="#FFFFFF"
+            android:text="Button 4"
+            android:background="@drawable/rounded_button"/>
         <Button
-            android:id="@+id/btn5"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
+            android:id="@+id/button5"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:backgroundTint="#00BCD4"
-            android:contentDescription="Button 5"/>
-
+            android:backgroundTint="#FFFFFF"
+            android:text="Button 5"
+            android:background="@drawable/rounded_button"/>
         <Button
-            android:id="@+id/btn6"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
+            android:id="@+id/button6"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:backgroundTint="#4CAF50"
-            android:contentDescription="Button 6"/>
-
-        <!-- Третий ряд -->
-        <Button
-            android:id="@+id/btn7"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
-            android:layout_margin="8dp"
-            android:backgroundTint="#CDDC39"
-            android:contentDescription="Button 7"/>
-
-        <Button
-            android:id="@+id/btn8"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
-            android:layout_margin="8dp"
-            android:backgroundTint="#FF9800"
-            android:contentDescription="Button 8"/>
-
-        <Button
-            android:id="@+id/btn9"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
-            android:layout_margin="8dp"
-            android:backgroundTint="#FF5722"
-            android:contentDescription="Button 9"/>
-
-        <!-- Четвёртый ряд -->
-        <Button
-            android:id="@+id/btn10"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
-            android:layout_margin="8dp"
-            android:backgroundTint="#009938"
-            android:contentDescription="Button 10"/>
-
-        <Button
-            android:id="@+id/btn11"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
-            android:layout_margin="8dp"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:contentDescription="Button 11"/>
-
-        <Button
-            android:id="@+id/btn12"
-            android:layout_width="90dp"
-            android:layout_height="95dp"
-            android:layout_margin="8dp"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:contentDescription="Button 12"/>
-
+            android:backgroundTint="#FFFFFF"
+            android:text="Button 6"
+            android:background="@drawable/rounded_button"/>
     </GridLayout>
+
+    <com.example.projectiapi.ColorPickerView
+        android:id="@+id/colorPickerCircle"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonPanel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/colorIndicator"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/indicator_circle"
+        app:layout_constraintTop_toBottomOf="@id/colorPickerCircle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
