--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -21,15 +21,15 @@
             android:id="@+id/lightEffect"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#99000000"
-            android:alpha="1" />
+            android:alpha="1"
+            android:background="#99000000" />
     </FrameLayout>
 
     <TextView
         android:id="@+id/versionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="v1.0.1.3"
+        android:text="v1.0.2.0"
         android:textSize="12sp"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,58 +37,60 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp" />
 
-    <!-- Кнопка для включения/выключения светодиода. Тоже лишняя, но она для проверки встроенного светодиода -->
-    <Button
-        android:id="@+id/btnToggleLED"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#212020"
-        android:text="Включить светодиод"
-        app:layout_constraintBottom_toTopOf="@+id/btnConnect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Кнопка для подключения к устройству -->
-    <Button
-        android:id="@+id/btnConnect"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="#212020"
-        android:text="Подключить к Bluetooth"
+        android:orientation="vertical"
+        android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/btnDummy1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#212020"
-        android:text="Меню"
-        app:layout_constraintBottom_toTopOf="@+id/btnToggleLED"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/btnToggleLED"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/btn_menu_selector"
+            android:text="Включить светодиод"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
 
-    <!--Лишняя кнопка, но нужна для теста ленты...-->
-    <Button
-        android:id="@+id/btnDummy2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#212020"
-        android:text="Включение ленты (Мигание)"
-        app:layout_constraintBottom_toTopOf="@+id/btnDummy1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/btnConnect"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/btn_menu_selector"
+            android:text="Подключить Bluetooth"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnDummy1"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/btn_menu_selector"
+            android:text="Меню"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnSound"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:backgroundTint="#212020"
+            android:text="Под музыку"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
