--- a/main/res/values/themes.xml
+++ b/main/res/values/themes.xml
@@ -5,5 +5,5 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.ProjectIAPI" parent="Base.Theme.ProjectIAPI" />
+    <style name="Theme.ProjectIAPI" parent="Theme.AppCompat.Light.NoActionBar" />
 </resources>
