--- a/main/res/drawable/btn_menu_background.xml
+++ b/main/res/drawable/btn_menu_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <bitmap android:src="@drawable/ic" android:gravity="center"/>
+        <bitmap android:src="@drawable/ic1" android:gravity="center"/>
     </item>
     <item>
         <shape android:shape="rectangle">
