--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:id="@+id/versionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="v1.0.2.0"
+        android:text="v1.0.2.3"
         android:textSize="12sp"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,25 +37,29 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp" />
 
+    <ImageButton
+        android:id="@+id/btnToggleLED"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="?attr/selectableItemBackground"
+        android:src="@drawable/ic_led_off"
+        android:scaleType="centerInside"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:contentDescription="Осветлить экран"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <LinearLayout
+        android:id="@+id/buttonLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center">
-
-        <Button
-            android:id="@+id/btnToggleLED"
-            android:layout_width="300dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/btn_menu_selector"
-            android:text="Включить светодиод"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnConnect"
@@ -67,7 +71,7 @@
             android:background="@drawable/btn_menu_selector"
             android:text="Подключить Bluetooth"
             android:textColor="#FFFFFF"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
 
         <Button
             android:id="@+id/btnDummy1"
@@ -79,18 +83,6 @@
             android:background="@drawable/btn_menu_selector"
             android:text="Меню"
             android:textColor="#FFFFFF"
-            android:textSize="18sp" />
-
-        <Button
-            android:id="@+id/btnSound"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:backgroundTint="#212020"
-            android:text="Под музыку"
-            android:visibility="gone" />
-
+            android:textSize="14sp" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
