--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -79,9 +79,21 @@
             android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/btn_menu_selector"
             android:text="Меню"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btnAudioListener"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/btn_menu_selector"
+            android:text="Режимы"
             android:textColor="#FFFFFF"
             android:textSize="14sp" />
     </LinearLayout>
