Finally update app
- Убрал отладочные уведомления
- Заменил описание окна

Приложение полностью было написано и готово к использованию. В дальнейшем при желании замены самой системы на более продвинутую можно будет доработать его до нового функционала.

Последняя версия на данный момент считается - 1.0.3.0

--- a/main/res/layout/dialog_menu.xml
+++ b/main/res/layout/dialog_menu.xml
@@ -19,7 +19,7 @@
         android:id="@+id/versionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Яркость"
+        android:text="Цвета"
         android:textSize="20sp"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/brightnessSlider"
